separate jwt dependency to infra